--- a/KalendarzKariery/KalendarzKariery/Content/Site.css
+++ b/KalendarzKariery/KalendarzKariery/Content/Site.css
@@ -108,7 +108,7 @@ body header {
 	top: 240px;
 	width: 50px;
 	z-index: 5;
-	}
+}
 
 	.calendar-navigation-arrows-right img {
 		position: static !important;
@@ -395,11 +395,9 @@ body header {
 #add-new-event-container {
 	top: 10.5%;
 	position: absolute;
-	z-index: 10;
-	background: rgb(58, 58, 58);
-	opacity: .9;
+	background: white;
 	z-index: 4;
-	display: none;
+	width: 100%;
 }
 
 .close-btn {
@@ -437,30 +435,34 @@ body header {
 	margin-top: 80px;
 }
 
-.add-event-fieldset label {
-	width: 150px;
-	display: inline-block;
+.add-event-fieldset {
+	color: rgb(155, 155, 155);
+	border: none;
+	background:rgb(238, 238, 238);
+	margin-bottom:6px;
 }
 
-.add-event-fieldset div {
-	padding: 5px;
-	margin-bottom: 5px;
-}
+	.add-event-fieldset label {
+		width: 150px;
+		display: inline-block;
+	}
+
+	.add-event-fieldset legend {
+		font-size: 2em;
+	}
+
+
+	.add-event-fieldset div {
+		padding: 5px;
+		margin-bottom: 5px;
+	}
 
 .add-event-form-container {
-	width: 600px;
+	width: 98.5%;
+	margin: 0 auto;
 }
 
 #btnAddNewEvent {
-	font-size: 2em;
-	color: rgb(152, 255, 163);
-	padding-left: 20px;
-	padding-right: 20px;
-	background: rgb(27,27,27);
-	border: 1px solid gray;
-	margin-top: 20px;
-	text-align: center;
-	width: 100%;
 }
 
 .light-icon {
@@ -610,10 +612,10 @@ background:rgb(115, 233, 162);
 	padding: 10px 0px;
 	overflow: hidden;
 	text-align: right;
-	background:rgb(136,136,136);
+	background: rgb(136,136,136);
 	border-bottom: 3px solid rgb(199, 199, 199);
-	border-top:1px solid rgb(205, 255, 192);
-	border-right:3px solid rgb(168, 201, 161);
+	border-top: 1px solid rgb(205, 255, 192);
+	border-right: 3px solid rgb(168, 201, 161);
 }
 
 	.lobby-profile-menu div {
@@ -677,7 +679,7 @@ background: rgba(40,40,40,0.2);
 
 .login-text {
 	margin-right: 15px;
-	color:rgb(205, 255, 192);
+	color: rgb(205, 255, 192);
 }
 
 .event-kind-text {
@@ -789,26 +791,26 @@ wydarzenia-tab {
 		padding: 0px 10px;
 		color: white;
 		font-size: 1.5em;
-		padding-top:5px;
+		padding-top: 5px;
 		/*box-shadow: rgb(201, 201, 201) 0px 3px 5px;*/
 	}
 
 	.month-nav-container .nav-prev {
-		position:relative;
-		top:2px;
+		position: relative;
+		top: 2px;
 	}
 
 	.month-nav-container .nav-next {
-		position:relative;
-		top:2px;
+		position: relative;
+		top: 2px;
 	}
 
-		.month-nav-container div:hover {
-			cursor: pointer;
-		}
+	.month-nav-container div:hover {
+		cursor: pointer;
+	}
 
-		.month-nav-container div img{
-		width:20px !important;
+	.month-nav-container div img {
+		width: 20px !important;
 	}
 
 .month-name-calendar {
@@ -817,17 +819,16 @@ wydarzenia-tab {
 	font-weight: bold;
 	width: 150px;
 	display: inline-block;
-	position:relative;
-	bottom:3px;
+	position: relative;
+	bottom: 3px;
 }
 
 .calendar-eventSummary-btn {
 	margin-right: 20px;
 }
 
-.calendar-eventSummary-btn img{
-
-}
+	.calendar-eventSummary-btn img {
+	}
 
 .details-day-cell {
 	position: relative;
@@ -844,12 +845,12 @@ wydarzenia-tab {
 
 #logoutForm {
 	float: right;
-	margin-right:20px;
+	margin-right: 20px;
 }
 
-#logoutForm a{
-color:white;
-}
+	#logoutForm a {
+		color: white;
+	}
 
 .form-label {
 	width: 200px;
@@ -871,8 +872,6 @@ color:white;
 
 
 .myButton-white {
-	margin-top: 40px;
-	margin-left: 40px;
 	-moz-box-shadow: inset 0px 1px 0px 0px #ffffff;
 	-webkit-box-shadow: inset 0px 1px 0px 0px #ffffff;
 	box-shadow: inset 0px 1px 0px 0px #ffffff;
@@ -916,6 +915,45 @@ color:white;
 		top: 1px;
 		outline: none;
 	}
+
+.float-left {
+	float: left;
+}
+
+#loginFormBtn {
+	margin-top: 40px;
+	margin-left: 40px;
+}
+
+#registerFormBtn {
+	margin-top: 40px;
+	margin-left: 40px;
+}
+
+.menu-item-dropdown-container {
+	display: none;
+	position: absolute;
+	width: 100%;
+	padding: 10px 10px;
+	background-color: rgba(0, 0, 0, .47);
+	border-top: 1px solid rgb(136, 136, 136);
+	left: -10px;
+}
+
+.menu-item-dropdown {
+	background: white;
+	margin-top: 4px;
+	width: 100%;
+	padding: 4px 0;
+	border: 1px solid rgb(136, 136, 136);
+	background: rgb(88, 88, 88);
+	color: white;
+}
+
+
+
+
+
 
 
 
@@ -1010,7 +1048,6 @@ Slider
 /* Styles for basic forms
 -----------------------------------------------------------*/
 fieldset {
-	border: 1px solid transparent;
 	padding: 1.4em;
 	margin: 0 0 1.5em 0;
 	width: auto;
@@ -1023,7 +1060,7 @@ legend {
 }
 
 textarea {
-	min-height: 75px;
+
 }
 
 .editor-label {
