--- a/KalendarzKariery/KalendarzKariery/Views/Shared/LobbyPage/_AddNewEvent.cshtml
+++ b/KalendarzKariery/KalendarzKariery/Views/Shared/LobbyPage/_AddNewEvent.cshtml
@@ -1,4 +1,13 @@
-﻿<div id="add-new-event-container">
+﻿@model KalendarzKariery.Models.ViewModels.AddEventViewModel
+
+<div id="add-new-event-container">
+	<div style="float: left; padding-top: 10px; padding-left: 50px;">
+		<span style="color: rgb(165, 165, 165); vertical-align: bottom;">Kategoria Wydarzenia:  </span>
+		<div class="menu-item-container" style="display: inline-block; float: none;">
+			<div class="border-item zajecia-border-tab"></div>
+			<div class="menu-item" name="zajęcia" style="cursor: auto; font-size: 0.8em; text-align: center;"><span>Zajęcia</span></div>
+		</div>
+	</div>
 	<div id="closeBtn-add-event-container" class="close-btn">
 	</div>
 	<div class="border-close-text"></div>
@@ -7,98 +16,141 @@
 	</div>
 	<section class="add-event-body">
 		<div class="add-event-form-container">
-			<fieldset class="add-event-fieldset">
-				<legend>Dodaj Wydarzenie</legend>
-				<div data-bind="with: event">
+			@using (Html.BeginForm("AddEvent", "Home", FormMethod.Post, new { id = "addEventForm" }))
+   {
+				<fieldset class="add-event-fieldset">
+					<legend>Dodaj Wydarzenie</legend>
+					<div data-bind="with: event">
 
-					<div>
-						<label>Prywatne czy publiczne: </label>
+						<div>
+							@*<label>Prywatne czy publiczne: </label>
 						<select id="scopeSelectBox" data-bind="value: privacyLevel">
 							<option value="private">prywatne</option>
 							<option value="public">publiczne</option>
-						</select>
-					</div>
-					<div>
+						</select>*@
+							@Html.LabelFor(m => m.Event.Title, new { @class = "form-label" })
+							@Html.TextBoxFor(m => m.Event.Title, new { maxlength = 30 })
+							@Html.ValidationMessageFor(m => m.Event.Title)
+						</div>
+						@*<div>
 						<label>Rodzaj: </label>
-						<select name="kindSelectBox" data-bind="value: kind.kindName">
-						<option value="Aktualności">aktualności</option>
-						<option value="Zajęcia">zajęcia</option>
-						<option value="Szkolenie">szkolenie</option>
-						<option value="Kurs">kurs</option>
-						<option value="Wydarzenie">wydarzenie</option>
-						<option value="Spotkanie">spotkanie</option>
-						<option value="Inne">inne</option>
+						<selecttion value="Aktualności">aktualności</option>
+							<optio name="kindSelectBox" data-bind="value: kind.kindName">
+							<opn value="Zajęcia">zajęcia</option>
+							<option value="Szkolenie">szkolenie</option>
+							<option value="Kurs">kurs</option>
+							<option value="Wydarzenie">wydarzenie</option>
+							<option value="Spotkanie">spotkanie</option>
+							<option value="Inne">inne</option>
 						</select>
-					</div>
-					<div>
+					</div>*@
+						@*	<div>
 						<label>Nazwa: </label>
 						<input type="text" name="whatTxtBox" data-bind="value: name" />
-					</div>
-					<div>
-						<label style="vertical-align:top;">Opis: </label>
-						<textarea rows="4" cols="20" name="descriptionTxtArea" data-bind="value: description" >
-						</textarea>
-					</div>
-					<div>
-						<label>Gdzie: </label>
-						<input type="text" name="whereTxtBox" data-bind="value: adress" />
-					</div>
-					<div style="display:inline-block;">
-						<label>zaczyna się o godzinie: </label>
-						<select id="startHourSelectBox" data-bind="value: date.startHour" >
-						<option value="7">7</option>
-						<option value="8">8</option>
-						<option value="9">9</option>
-						<option value="10">10</option>
-						<option value="11">11</option>
-						<option value="12">12</option>
-						<option value="13">13</option>
-						<option value="14">14</option>
-						<option value="15">15</option>
-						<option value="16">16</option>
-						<option value="17">17</option>
-						<option value="18">18</option>
-						<option value="19">19</option>
-						<option value="20">20</option>
-						<option value="21">21</option>
-						</select>
-					</div>
-					<div style="display:inline-block;">
-						<label>kończy się o godzinie: </label>
-						<select id="endHourSelectBox" data-bind="value: date.endHour" >
-						<option value="7">7</option>
-						<option value="8">8</option>
-						<option value="9">9</option>
-						<option value="10">10</option>
-						<option value="11">11</option>
-						<option value="12">12</option>
-						<option value="13">13</option>
-						<option value="14">14</option>
-						<option value="15">15</option>
-						<option value="16">16</option>
-						<option value="17">17</option>
-						<option value="18">18</option>
-						<option value="19">19</option>
-						<option value="20">20</option>
-						<option value="21">21</option>
-						</select>
-					</div>
+					</div>*@
+						<div>
+							@*<label style="vertical-align: top;">Opis: </label>
+						<textarea rows="4" cols="20" name="descriptionTxtArea" data-bind="value: description">
+						</textarea>*@
+							@Html.LabelFor(m => m.Event.Description, new { @class = "form-label", @style = "vertical-align:top;" })
+							@Html.TextAreaFor(m => m.Event.Description, new { cols = 30, rows = 2, maxlength = 100 })
+							@Html.ValidationMessageFor(m => m.Event.Description)
+						</div>
 
-					<div>
+						<div>
+							@Html.LabelFor(m => m.Event.StartDate, new { @class = "form-label" })
+							@Html.TextBoxFor(m => m.Event.StartDate, new { maxlength = 10, @style= "width:80px;" , @value = "{0:dd/MM/yyyy}"})
+							@Html.ValidationMessageFor(m => m.Event.StartDate)
+						</div>
+
+						<div>
+							@Html.Label("Godzina rozpoczęcia: ", new { @class = "form-label" })
+							@Html.TextBox("eventStartHourTxtBox", "", new { maxlength = 5, @style= "width:50px;" , @name = "startHour"})
+							@*@Html.ValidationMessageFor(m => m.Event.StartDate)*@
+						</div>
+						<div>
+							@Html.Label("Godzina zakończenia: ", new { @class = "form-label" })
+							@Html.TextBox("eventEndHourTxtBox", "", new { maxlength = 5, @style= "width:50px;", @name = "endHour"})
+							@*@Html.ValidationMessageFor(m => m.Event.StartDate)*@
+						</div>
+
+						<div>
+							@Html.LabelFor(m => m.Address.Address1, new { @class = "form-label" })
+							@Html.TextBoxFor(m => m.Address.Address1, new { maxlength = 30 })
+							@Html.ValidationMessageFor(m => m.Address.Address1)
+						</div>
+						<div>
+							@Html.LabelFor(m => m.Address.City, new { @class = "form-label" })
+							@Html.TextBoxFor(m => m.Address.City, new { maxlength = 30 })
+							@Html.ValidationMessageFor(m => m.Address.City)
+						</div>
+						<div>
+							@Html.LabelFor(m => m.Address.ZipCode, new { @class = "form-label"})
+							@Html.TextBoxFor(m => m.Address.ZipCode, new { maxlength = 30, @style= "width:50px;"})
+							@Html.ValidationMessageFor(m => m.Address.ZipCode)
+						</div>
+						<div>
+
+							@Html.LabelFor(m => m.Event.Details, new { @class = "form-label", @style = "vertical-align:top;" })
+							@Html.TextAreaFor(m => m.Event.Details, new { cols = 30, rows = 5, maxlength = 500 })
+							@Html.ValidationMessageFor(m => m.Event.Details)
+						</div>
+
+						@*<div style="display: inline-block;">
+						<label>zaczyna się o godzinie: </label>
+						<select id="startHourSelectBox" data-bind="value: date.startHour">
+							<option value="7">7</option>
+							<option value="8">8</option>
+							<option value="9">9</option>
+							<option value="10">10</option>
+							<option value="11">11</option>
+							<option value="12">12</option>
+							<option value="13">13</option>
+							<option value="14">14</option>
+							<option value="15">15</option>
+							<option value="16">16</option>
+							<option value="17">17</option>
+							<option value="18">18</option>
+							<option value="19">19</option>
+							<option value="20">20</option>
+							<option value="21">21</option>
+						</select>
+					</div>
+					<div style="display: inline-block;">
+						<label>kończy się o godzinie: </label>
+						<select id="endHourSelectBox" data-bind="value: date.endHour">
+							<option value="7">7</option>
+							<option value="8">8</option>
+							<option value="9">9</option>
+							<option value="10">10</option>
+							<option value="11">11</option>
+							<option value="12">12</option>
+							<option value="13">13</option>
+							<option value="14">14</option>
+							<option value="15">15</option>
+							<option value="16">16</option>
+							<option value="17">17</option>
+							<option value="18">18</option>
+							<option value="19">19</option>
+							<option value="20">20</option>
+							<option value="21">21</option>
+						</select>
+					</div>*@
+
+						@*<div>
 						<label>Dodane przez: </label>
 						<input type="text" data-bind="value: author" />
+					</div>*@
+
 					</div>
 
-				</div>
+					<input type="hidden" name="" id="hiddenDay" />
 
-				<input type="hidden" name="" id="hiddenDay" />
+					<button id="btnAddNewEvent" class="myButton-white" data-bind="click: $root.addEventOnClick.bind($data, $data.privacyLevels.public)">Dodaj</button>
+				</fieldset>
+   }
 
-				<button id="btnAddNewEvent" data-bind="click: $root.addEventToEvents">+</button>
-			</fieldset>
+
 		</div>
 	</section>
 </div>
-<script type="text/javascript">
-
-
-</script>
