changed Id of log container div to keep convention naming

--- a/KalendarzKariery/KalendarzKariery/Content/Site.css
+++ b/KalendarzKariery/KalendarzKariery/Content/Site.css
@@ -80,7 +80,7 @@ body header {
 	left: 0px;
 }
 
-#lobby-logo {
+#lobbyLogo {
 	background-image: url(../Images/kalendarzLogo.png);
 	font-size: 1em;
 	width: 680px;
