--- a/KalendarzKariery/KalendarzKariery/Views/Shared/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKariery/KalendarzKariery/Views/Shared/LobbyPage/_Lobby.cshtml
@@ -2,7 +2,7 @@
 <div class="lobby-content-container">
 <div style="background:white;position:relative;width:100%;height:24px;"></div>
 	<div id="lobby-menu-header" class="site-menu-header">
-		<div id="lobby-logo">
+		<div id="lobbyLogo">
 		</div>
 		<div>
 		<div class="menu-item-container">
