Improved database, fixed entities

--- a/KalendarzKariery/KalendarzKariery/Views/Shared/Index.cshtml
+++ b/KalendarzKariery/KalendarzKariery/Views/Shared/Index.cshtml
@@ -297,11 +297,11 @@
 
 					$(".menu-item-dropdown").hover(function () {
 						$(this).css({
-							"cursor": "pointer",
+							"cursor": "pointer"
 						});
 					}, function () {
 						$(this).css({
-							"cursor": "auto",
+							"cursor": "auto"
 						});
 					});
 
