cleaned solution folders, added empty core project

--- a/KalendarzKariery/KalendarzKariery/Content/Site.css
+++ b/KalendarzKariery/KalendarzKariery/Content/Site.css
@@ -81,7 +81,7 @@ body header {
 }
 
 #lobbyLogo {
-	background-image: url(../Images/kalendarzLogo.png);
+	background-image: url(../Images/Logo/kalendarzLogo.png);
 	font-size: 1em;
 	width: 680px;
 	height: 100%;
