improved calendar visual frontend, fixed jquery validate

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
 
 					<section id="calendar">
 					</section>
-					@Html.Partial("_AddNewEvent", new KalendarzKariery.ViewModels.AddEventViewModel())
+					@Html.Partial("_AddNewEvent")
 					@Html.Partial("_HoverEvent")
 				</div>
 				<div id="rightSideCalendar" class="side">
