--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -148,7 +148,7 @@ body header {
 	overflow: hidden;
 	/*color: rgb(204,204,204);*/
 	color: white;
-	background: rgba(0,0,0,.04);
+	background:rgb(115, 216, 163);
 	position: relative;
 }
 
@@ -237,7 +237,7 @@ body header {
 	padding-top: 10px;
 	display: table-cell;
 	text-align: center;
-	/*background: rgba(255,255,255,.5);*/
+	background: rgb(82,82,82);
 }
 
 	.weekday:nth-child(6) {
@@ -288,7 +288,8 @@ body header {
 
 .other-month {
 	border: 2px solid #ddd;
-	background-color: #eee;
+	background: #F7F7F7;
+	/*background-color: #eee;*/
 	position: relative;
 }
 
@@ -391,7 +392,9 @@ body header {
 }
 
 #add-new-event-container {
-	top: 10.5%;
+	/*top: 10.5%;*/
+	top: -20px;
+	padding-top: 10px;
 	position: absolute;
 	background: white;
 	z-index: 4;
@@ -477,14 +480,13 @@ background:rgb(115, 233, 162);
 }
 
 .addNewEvent-cellIcon {
-	width: 20px;
+	width: 40px;
 	height: 20px;
 	position: absolute;
 	right: 0px;
 	top: 56px;
 	text-align: center;
 	margin-right: 2px;
-	border-radius: 20px;
 	display: none;
 	z-index: 10;
 }
