--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -148,7 +148,7 @@ body header {
 	overflow: hidden;
 	/*color: rgb(204,204,204);*/
 	color: white;
-	background:rgb(115, 216, 163);
+	background: rgb(115, 216, 163);
 	position: relative;
 }
 
@@ -227,6 +227,7 @@ body header {
 
 .weekday-container {
 	display: table-row;
+	color: rgb(145, 145, 145);
 }
 
 .weekday {
@@ -237,7 +238,7 @@ body header {
 	padding-top: 10px;
 	display: table-cell;
 	text-align: center;
-	background: rgb(82,82,82);
+	/*background: rgb(82,82,82);*/
 }
 
 	.weekday:nth-child(6) {
@@ -287,8 +288,8 @@ body header {
 	}
 
 .other-month {
-	border: 2px solid #ddd;
-	background: #F7F7F7;
+	/*border: 2px solid #ddd;
+	background: #F7F7F7;*/
 	/*background-color: #eee;*/
 	position: relative;
 }
@@ -439,7 +440,7 @@ body header {
 .add-event-fieldset {
 	color: rgb(155, 155, 155);
 	border: none;
-	background: rgb(238, 238, 238);
+	background: rgb(243, 243, 243);
 	margin-bottom: 6px;
 }
 
@@ -589,7 +590,6 @@ background:rgb(115, 233, 162);
 	float: left;
 	width: 50%;
 	position: relative;
-	padding: 20px;
 	color: rgb(109,109,109);
 	/*background:rgb(76, 86, 94);*/
 	/*box-shadow:0 1px 5px rgb(60,60,60);*/
@@ -673,7 +673,6 @@ background:rgb(115, 233, 162);
 .event-kind-text {
 	color: rgb(240,240,240);
 	width: 100px;
-	padding: 20px;
 	/*box-shadow: 0 2px 10px rgb(60, 60, 60);*/
 	border: 1px solid rgb(224,224,224);
 }
@@ -769,8 +768,7 @@ wydarzenia-tab {
 .month-nav-container {
 	display: inline-block;
 	float: left;
-	margin-top: 4px;
-	margin-left: 10px;
+	margin-top: 18px;
 }
 
 	.month-nav-container div {
