format document test commit

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model KalendarzKariery.Models.RegisterExternalLoginModel
+﻿@model KalendarzKarieryData.Models.AccountModels.RegisterExternalLoginModel
 @{
     ViewBag.Title = "Register";
 }
