--- a/KalendarzKarierySolution/KalendarzKariery/Views/Account/Manage.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Account/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@model KalendarzKariery.Models.LocalPasswordModel
+﻿@model KalendarzKarieryData.Models.AccountModels.LocalPasswordModel
 @{
     ViewBag.Title = "Manage Account";
 }
