--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -169,11 +169,8 @@ body header {
 	color: white;
 	background: rgba(0,0,0,.04);
 	height: 50px;
-	/*border-left: 1px solid #D8D8D8;*/
 	border-bottom: 1px solid rgb(247, 247, 247);
 	border-top: 1px solid #D8D8D8;
-	/*border-left:2px solid #313131;
-	border-right:2px solid #313131;*/
 }
 
 #loginPageContainer {
@@ -272,14 +269,14 @@ body header {
 	position: relative;
 }
 
-.current-month {
+.current-month-cell {
 	border: 2px solid white;
 	background-color: rgb(253,253,253);
 	box-shadow: rgb(235, 235, 235) 0px 3px 5px;
 	color: black;
 }
 
-	.current-month span {
+	.current-month-cell span {
 		color: rgb(177,177,177);
 		position: absolute;
 		padding-left: 2px;
@@ -287,14 +284,14 @@ body header {
 		top: 60px;
 	}
 
-.other-month {
+.other-month-cell {
 	/*border: 2px solid #ddd;
 	background: #F7F7F7;*/
 	/*background-color: #eee;*/
 	position: relative;
 }
 
-	.other-month span {
+	.other-month-cell span {
 		position: absolute;
 		padding-left: 2px;
 		padding-right: 5px;
@@ -603,6 +600,15 @@ background:rgb(115, 233, 162);
 	width: 24%;
 }
 
+.year-name-container {
+	background: white;
+	color: gray;
+	letter-spacing: 2px;
+	padding: 2px 10px;
+	font-size: 16px;
+	color: rgb(115, 216, 163);
+}
+
 #showRegisterFormBtn {
 	margin-left: 20px;
 	margin-right: 4px;
@@ -765,48 +771,30 @@ wydarzenia-tab {
 			width: 6.66%;
 		}
 
-.month-nav-container {
-	display: inline-block;
-	float: left;
-	margin-top: 18px;
+.month-name-header-container {
+	position: relative;
+	top: -3px;
 }
 
-	.month-nav-container div {
-		/*border: 2px solid white;*/
-		display: inline-block;
-		padding: 0px 10px;
-		color: white;
-		font-size: 1.5em;
-		padding-top: 5px;
-		/*box-shadow: rgb(201, 201, 201) 0px 3px 5px;*/
-	}
 
-	.month-nav-container .nav-prev {
-		position: relative;
-		top: 2px;
-	}
+.month-name-container {
+	display: inline-block;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 1px;
+	padding-top: 5px;
+}
 
-	.month-nav-container .nav-next {
-		position: relative;
-		top: 2px;
-	}
-
-	.month-nav-container div:hover {
-		cursor: pointer;
-	}
-
-	.month-nav-container div img {
-		width: 20px !important;
-	}
 
 .month-name-calendar {
-	/*font-size: 2em;*/
-	color: rgb(147, 156, 149);
-	font-weight: bold;
-	width: 150px;
-	display: inline-block;
-	position: relative;
-	bottom: 3px;
+	/*color: rgb(147, 156, 149);*/
+	color: rgb(252, 252, 252);
+	text-decoration: underline;
+}
+
+.current-month-name-calendar {
+	color: rgb(115, 216, 163);
+	background: white;
 }
 
 .calendar-eventSummary-btn {
@@ -1013,7 +1001,7 @@ Slider
 	z-index: 3;
 	top: 0;
 	text-align: center;
-	width: 90%;
+	width: 100%;
 }
 
 	.slides-pagination a {
