--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -22,12 +22,13 @@ header, footer, nav, section, div {
 -----------------------------------------------------------*/
 
 
-.dottedWrapper {
-	background: url(../img/point3.png) repeat scroll 0 0 transparent;
+.dotted-page-overlay {
+	background: url(../Images/point.png) repeat scroll 0 0 transparent;
 	height: 100%;
 	width: 100%;
-	z-index: 0;
+	z-index: 4;
 	position: absolute;
+	display: none;
 }
 
 body header {
@@ -165,7 +166,6 @@ body header {
 
 #calendar-menu-header {
 	display: table-caption;
-	text-align: center;
 	color: white;
 	background: rgba(0,0,0,.04);
 	height: 50px;
@@ -184,6 +184,10 @@ body header {
 	border: 1px solid rgb(216, 255, 232);
 	margin-top: 164px;
 }
+
+	#loginPageContainer legend {
+		font-size: 1.5em;
+	}
 
 #registerPageContainer {
 	background: rgba(0,0,0,.04);
@@ -390,55 +394,49 @@ body header {
 }
 
 #add-new-event-container {
-	/*top: 10.5%;*/
-	top: -20px;
-	padding-top: 10px;
+	top: 25px;
+	padding-top: 20px;
 	position: absolute;
 	background: white;
 	z-index: 4;
-	width: 100%;
+	width: 80%;
+	margin-left: 10%;
+	display: none;
+	-webkit-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
+	-moz-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
+	box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 }
 
-.close-btn {
-	width: 20%;
-	float: right;
-	border-top: 60px solid rgb(233, 233, 233);
-	border-left: 40px solid transparent;
+.large-popup-header {
+	width: 100%;
+	height: 60px;
+	background: rgb(233, 233, 233);
+	border-bottom: 1px solid lightgray;
+	border-top: 1px solid lightgray;
+}
+
+.btn-close {
 	position: relative;
-	top: 8px;
-	right: 6px;
+	bottom: 4px;
+	margin-right: 10px;
+	float: right;
 }
 
 .close-text {
-	position: absolute;
 	color: rgb(117, 117, 117);
 	font-size: 1.4em;
-	right: 4px;
-	padding: 10px;
-	padding-right: 20px;
-	opacity: .9;
-}
-
-.border-close-text {
-	position: absolute;
-	right: 4px;
-	top: 4px;
-	width: 10%;
-	border-top: 40px solid white;
-	border-left: 28px solid transparent;
 }
 
 .add-event-body {
 	height: auto;
 	color: rgb(216, 216, 216);
-	margin-top: 80px;
+	margin-top: 30px;
 }
 
 .add-event-fieldset {
 	color: rgb(155, 155, 155);
-	border: none;
+	border: 1px solid lightgray;
 	background: rgb(243, 243, 243);
-	margin-bottom: 6px;
 }
 
 	.add-event-fieldset label {
@@ -450,18 +448,9 @@ body header {
 		font-size: 2em;
 	}
 
-
-	.add-event-fieldset div {
-		padding: 5px;
-		margin-bottom: 5px;
-	}
-
 .add-event-form-container {
 	width: 98.5%;
 	margin: 0 auto;
-}
-
-#btnAddNewEvent {
 }
 
 .light-icon {
@@ -604,9 +593,13 @@ background:rgb(115, 233, 162);
 	background: white;
 	color: gray;
 	letter-spacing: 2px;
-	padding: 2px 10px;
-	font-size: 16px;
 	color: rgb(115, 216, 163);
+	display: inline-block;
+	padding-bottom: 1px;
+	padding-top: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+	float: right;
 }
 
 #showRegisterFormBtn {
@@ -772,8 +765,7 @@ wydarzenia-tab {
 		}
 
 .month-name-header-container {
-	position: relative;
-	top: -3px;
+
 }
 
 
@@ -1023,16 +1015,13 @@ Slider
 -----------------------------------------------------------*/
 fieldset {
 	padding: 1.4em;
-	margin: 0 0 1.5em 0;
+	margin: 0 0 .5em 0;
 	width: auto;
 }
 
 
 legend {
 	font-size: 1.2em;
-	font-weight: bold;
-	position: relative;
-	top: -20px;
 }
 
 textarea {
