--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -7,12 +7,12 @@
 			<div class="slide-item-lobby">
 				<div id="lobbyBg">
 					<img src="~/Images/kalendarzTloClear.png" alt="background" />
+					<div class="dotted-page-overlay"></div>
 					<section id="lobby">
 						@Html.Partial("_Lobby")
 					</section>
 				</div>
-				<div id="rightSideLobby" class="side">
-				</div>
+				<div id="rightSideLobby" class="side"></div>
 			</div>
 		</li>
 		<li>
@@ -21,20 +21,23 @@
 				</div>
 				<div id="calendarBg">
 					<img src="~/Images/kalendarzTloClear.png" alt="background" />
-
+					<div class="dotted-page-overlay"></div>
 					<section id="calendar">
+
+						<!-- Calendar is added dynamically (calendarWidget.js)   -->
+
 					</section>
 					@Html.Partial("_AddNewEvent")
 					@Html.Partial("_HoverEvent")
 				</div>
-				<div id="rightSideCalendar" class="side">
-				</div>
+				<div id="rightSideCalendar" class="side"></div>
 			</div>
 		</li>
 		<li>
 			<div class="slide-item-details">
 				<div id="detailsBg">
 					<img src="~/Images/kalendarzTloClear.png" alt="background" />
+					<div class="dotted-page-overlay"></div>
 					<div id="details">
 						@Html.Partial("_Details")
 					</div>
@@ -51,21 +54,22 @@
 	$(function () {
 
 		var mainProgram = {
-			Initialize: function() {
+			Initialize: function () {
 
 				var $calendar = $("#calendar");
 				var $details = $("#details");
 				var $lobby = $("#lobby");
 				var date = new Date();
 
-				$calendar.calendarWidget({ month: date.getMonth(), year: 2013 });
+				var calendarViewModel = new CalendarViewModel(2014, date.getMonth(), date.getDate());
+				$calendar.calendarWidget(calendarViewModel.calendarPageDisplayDate);
 
-				ko.applyBindings(new CalendarViewModel(2014, date.getMonth(), date.getDate()));
+				ko.applyBindings(calendarViewModel);
 
 				//$(".calendar-cell").each(function (i) {
 				//	if (i == 5 || i == 6 || i == 12 || i == 13 || i == 19 || i == 20 || i == 26 || i == 27 || i == 33 || i == 34 || i == 40 || i == 41) {
 				//		$(this).css({
-				//			"color": "rgb(255, 203, 203)",
+				//			"color": "rgb(255, 203, 203)"
 				//		});
 				//	}
 				//});
@@ -75,12 +79,13 @@
 				$details.append('<div class="details-navigation-arrows-left"><img src="Images/Nav/arrow-Left.png" alt="arrow-Left"/></div>');
 				$lobby.append('<div class="lobby-navigation-arrows-right"><img src="Images/Nav/arrow-Right.png" alt="arrow-Right"/></div>');
 
-				this.Initialize.InitializeHover = function() {
+				this.Initialize.InitializeHover = function () {
 
-					$container = $(".event-hover-container");
+					var $container = $(".event-hover-container");
+					var $mainContainer = $("#mainContainer");
 
-					$("#mainContainer").on({
-						mouseenter: function() {
+					$mainContainer.on({
+						mouseenter: function () {
 
 							var name = $(this).find("input").attr("name");
 							var adress = $(this).find("input").attr("adress");
@@ -99,52 +104,73 @@
 
 							$container.show();
 						},
-						mouseleave: function() {
+						mouseleave: function () {
 							$container.hide();
 						}
 					}, '.event-rectangle');
 
+					$mainContainer.on({
+						mouseenter: function () {
+							$(this).css({
+								"border-bottom": "2px solid rgb(235,235,235)",
+								"border-top": "2px solid rgb(250,250,250)",
+								"cursor": "pointer",
+								"-moz-box-shadow": "none",
+								"-webkist-box-shadow": "none",
+								"box-shadow": "none",
+								"top": "3px"
+							}).find(".addNewEvent-cellIcon").fadeIn();
+						},
+						mouseleave: function () {
+							$(this).css({
+								"border": "2px solid white",
+								"cursor": "auto",
+								"-moz-box-shadow": "0px 3px 5px rgb(235,235,235)",
+								"-webkist-box-shadow": "0px 3px 5px rgb(235,235,235)",
+								"box-shadow": "0px 3px 5px rgb(235,235,235)",
+								"top": "0"
+							}).find(".addNewEvent-cellIcon").hide();
+						}
+					}, '.current-month-cell');
 
-					var $currentMonthIcon = $(".current-month-cell .addNewEvent-cellIcon");
-					var $otherMonthIcon = $(".other-month-cell .addNewEvent-cellIcon");
+					$mainContainer.on({
+						mouseenter: function () {
+							$(this).css({
+								"cursor": "pointer",
+								//"-moz-box-shadow": "none",
+								//"-webkist-box-shadow": "none",
+								//"box-shadow": "none",
+								"top": "3px"
+							}).find(".addNewEvent-cellIcon").fadeIn();
+						},
+						mouseleave: function () {
+							$(this).css({
+								"cursor": "auto",
+								//"-moz-box-shadow": "0px 3px 5px #ddd",
+								//"-webkist-box-shadow": "0px 3px 5px #ddd",
+								//"box-shadow": "0px 3px 5px #ddd",
+								"top": "0px"
+							}).find(".addNewEvent-cellIcon").fadeOut();
+						}
+					}, '.other-month-cell');
 
-					$(".current-month-cell").hover(function() {
-						$(this).css({
-							"border-bottom": "2px solid rgb(235,235,235)",
-							"border-top": "2px solid rgb(250,250,250)",
-							"cursor": "pointer",
-							"-moz-box-shadow": "none",
-							"-webkist-box-shadow": "none",
-							"box-shadow": "none",
-							"top": "3px"
-						}).find($currentMonthIcon).fadeIn();
-					}, function() {
-						$(this).css({
-							"border": "2px solid white",
-							"cursor": "auto",
-							"-moz-box-shadow": "0px 3px 5px rgb(235,235,235)",
-							"-webkist-box-shadow": "0px 3px 5px rgb(235,235,235)",
-							"box-shadow": "0px 3px 5px rgb(235,235,235)",
-							"top": "0px"
-						}).find($currentMonthIcon).hide();
-					});
-					$(".other-month-cell").hover(function() {
-						$(this).css({
-							"cursor": "pointer",
-							//"-moz-box-shadow": "none",
-							//"-webkist-box-shadow": "none",
-							//"box-shadow": "none",
-							"top": "3px"
-						}).find($otherMonthIcon).fadeIn();
-					}, function() {
-						$(this).css({
-							"cursor": "auto",
-							//"-moz-box-shadow": "0px 3px 5px #ddd",
-							//"-webkist-box-shadow": "0px 3px 5px #ddd",
-							//"box-shadow": "0px 3px 5px #ddd",
-							"top": "0px"
-						}).find($otherMonthIcon).fadeOut();
-					});
+					$mainContainer.on({
+						mouseenter: function () {
+							$(this).css("background", "rgb(160, 243, 169)");
+						},
+						mouseleave: function () {
+							$(this).css("background", "rgb(225,225,225)");
+						}
+					}, '.light-icon');
+
+					$mainContainer.on({
+						mouseenter: function () {
+							$(this).css("background", "rgb(160, 243, 169)");
+						},
+						mouseleave: function () {
+							$(this).css("background", "rgb(215,215,215)");
+						}
+					}, '.dark-icon');
 
 					var $menuItemContainer = $(".menu-item-container");
 
@@ -171,7 +197,32 @@
 
 					//});
 
-					$(".month-name-calendar").hover(function () {
+					$mainContainer.on({
+						mouseenter: function () {
+							$(this).css({
+								"cursor": "pointer"
+							});
+						},
+						mouseleave: function () {
+							$(this).css({
+								"cursor": "auto"
+							});
+						}
+					}, ".month-name-calendar");
+
+					$(".menu-item").hover(function () {
+						$(this).css({
+							"cursor": "pointer",
+							"font-size": ".9em"
+						});
+					}, function () {
+						$(this).css({
+							"cursor": "auto",
+							"font-size": ".8em"
+						});
+					});
+
+					$(".menu-item-dropdown").hover(function () {
 						$(this).css({
 							"cursor": "pointer"
 						});
@@ -182,46 +233,23 @@
 					});
 
 
-					$(".menu-item").hover(function() {
-						$(this).css({
-							"cursor": "pointer",
-							"font-size": ".9em"
-						});
-					}, function() {
-						$(this).css({
-							"cursor": "auto",
-							"font-size": ".8em"
-						});
-					});
-
-					$(".menu-item-dropdown").hover(function() {
+					$("#leftSide").hover(function () {
 						$(this).css({
 							"cursor": "pointer"
 						});
-					}, function() {
+					}, function () {
 						$(this).css({
 							"cursor": "auto"
 						});
 					});
-
-
-					$("#leftSide").hover(function() {
+					$("#rightSide").hover(function () {
 						$(this).css({
 							"cursor": "pointer"
 						});
-					}, function() {
+					}, function () {
 						$(this).css({
 							"cursor": "auto"
 						});
-					});
-					$("#rightSide").hover(function() {
-						$(this).css({
-							"cursor": "pointer"
-						});
-					}, function() {
-						$(this).css({
-							"cursor": "auto"
-						})
 					});
 
 					var $leftSideCalendar = $("#leftSideCalendar");
@@ -229,202 +257,150 @@
 					var $leftSideDetails = $("#leftSideDetails");
 					var $rightSideLobby = $("#rightSideLobby");
 
-					$leftSideCalendar.hover(function() {
+					$leftSideCalendar.hover(function () {
 						$(this).css({
 							//"backgroundPosition": "left",
 							"cursor": "pointer"
 						});
-					}, function() {
+					}, function () {
 						$(this).css({
 							//"backgroundPosition": "right",
 							"cursor": "auto"
-						})
+						});
 					});
-					$(".calendar-navigation-arrows-left").hover(function() {
+					$(".calendar-navigation-arrows-left").hover(function () {
 						$(this).css({
 							"cursor": "pointer"
 						});
 
 						$leftSideCalendar.css({
 							//"backgroundPosition": "left"
-						
+
 						});
-					}, function() {
+					}, function () {
 						$(this).css({
 							"cursor": "auto"
 						});
 						$leftSideCalendar.css({
 							//"backgroundPosition": "right"
-						
-						})
+
+						});
 					});
-					$rightSideCalendar.hover(function() {
+					$rightSideCalendar.hover(function () {
 						$(this).css({
 							//"backgroundPosition": "right",
 							"cursor": "pointer"
 						});
-					}, function() {
+					}, function () {
 						$(this).css({
 							//"backgroundPosition": "left",
 							"cursor": "auto"
-						})
+						});
 					});
-					$(".calendar-navigation-arrows-right").hover(function() {
+					$(".calendar-navigation-arrows-right").hover(function () {
 						$(this).css({
 							"cursor": "pointer"
 						});
 
 						$rightSideCalendar.css({
 							//"backgroundPosition": "right"
-						
+
 						});
-					}, function() {
+					}, function () {
 						$(this).css({
 							"cursor": "auto"
 						});
 						$rightSideCalendar.css({
 							//"backgroundPosition": "left"
-						
-						})
+
+						});
 					});
 
-					$(".lobby-navigation-arrows-right").hover(function() {
+					$(".lobby-navigation-arrows-right").hover(function () {
 						$(this).css({
 							"cursor": "pointer"
 						});
 
 						$rightSideLobby.css({
 							//"backgroundPosition": "right"
-						
+
 						});
-					}, function() {
+					}, function () {
 						$(this).css({
 							"cursor": "auto"
 						});
 						$rightSideLobby.css({
 							//"backgroundPosition": "left"
-						
-						})
+
+						});
 					});
-					$(".details-navigation-arrows-left").hover(function() {
+					$(".details-navigation-arrows-left").hover(function () {
 						$(this).css({
 							"cursor": "pointer"
 						});
 
 						$leftSideDetails.css({
 							//"backgroundPosition": "left"
-						
+
 						});
-					}, function() {
+					}, function () {
 						$(this).css({
 							"cursor": "auto"
 						});
 						$leftSideDetails.css({
 							//"backgroundPosition": "right"
-						
-						})
+
+						});
 					});
-					$leftSideDetails.hover(function() {
+					$leftSideDetails.hover(function () {
 						$(this).css({
 							//"backgroundPosition": "left",
 							"cursor": "pointer"
 						});
-					}, function() {
+					}, function () {
 						$(this).css({
 							//"backgroundPosition": "right",
 							"cursor": "auto"
-						})
+						});
 					});
-					$rightSideLobby.hover(function() {
+					$rightSideLobby.hover(function () {
 						$(this).css({
 							//"backgroundPosition": "right",
 							"cursor": "pointer"
 						});
-					}, function() {
+					}, function () {
 						$(this).css({
 							//"backgroundPosition": "left",
 							"cursor": "auto"
-						})
+						});
 					});
 
-					var $closeBtnAddEventContainer = $("#closeBtn-add-event-container");
+					var $closeBtnAddEventContainer = $("#btnClose-AddEventContainer");
 
-					$closeBtnAddEventContainer.hover(function() {
+					$closeBtnAddEventContainer.hover(function () {
 						$(this).css({
-							"top": "10px",
+							"bottom": "0",
 							"cursor": "pointer"
-						})
-					}, function() {
+						});
+					}, function () {
 						$(this).css({
-							"top": "8px",
+							"bottom": "4px",
 							"cursor": "auto"
-						})
+						});
 					});
-					$(".close-text").hover(function() {
-						$(this).css({
-							"cursor": "pointer"
-						})
-						$closeBtnAddEventContainer.css({
-							"top": "10px"
-						})
 
-					}, function() {
-						$(this).css({
-							"cursor": "auto"
-						})
-						$closeBtnAddEventContainer.css({
-							"top": "8px"
-						})
-					});
-					$(".border-close-text").hover(function() {
+					$("#btnAddNewEvent").hover(function () {
 						$(this).css({
 							"cursor": "pointer"
-						})
-						$closeBtnAddEventContainer.css({
-							"top": "10px"
-						})
-					}, function() {
+						});
+					}, function () {
 						$(this).css({
 							"cursor": "auto"
-						})
-						$closeBtnAddEventContainer.css({
-							"top": "8px"
-						})
+						});
 					});
-
-					$("#btnAddNewEvent").hover(function() {
-						$(this).css({
-							"cursor": "pointer"
-						})
-					}, function() {
-						$(this).css({
-							"cursor": "auto"
-						})
-					});
-
-					var $mainContainer = $("#mainContainer");
-
-					$mainContainer.on({
-						mouseenter: function() {
-							$(this).css("background", "rgb(160, 243, 169)");
-						},
-						mouseleave: function() {
-							$(this).css("background", "rgb(225,225,225)");
-						}
-					}, '.light-icon');
-
-					$mainContainer.on({
-						mouseenter: function() {
-							$(this).css("background", "rgb(160, 243, 169)");
-						},
-						mouseleave: function() {
-							$(this).css("background", "rgb(215,215,215)");
-						}
-					}, '.dark-icon');
-
 				}();
 
-				this.Initialize.InitializeClick = function() {
+				this.Initialize.InitializeClick = function () {
 
 
 					//$(".szkolenia-btn").click(function () {
@@ -452,51 +428,50 @@
 					//	window.location = "#2";
 					//});
 
-					$mainContainer.on("click", "#leftSideCalendar", function(event) {
+					$mainContainer.on("click", "#leftSideCalendar", function (event) {
 						window.location = "#0";
 					});
-					$mainContainer.on("click", ".calendar-navigation-arrows-left", function(event) {
+					$mainContainer.on("click", ".calendar-navigation-arrows-left", function (event) {
 						window.location = "#0";
 					});
-					$mainContainer.on("click", "#rightSideCalendar", function(event) {
+					$mainContainer.on("click", "#rightSideCalendar", function (event) {
 						window.location = "#2";
 					});
-					$mainContainer.on("click", ".calendar-navigation-arrows-right", function(event) {
+					$mainContainer.on("click", ".calendar-navigation-arrows-right", function (event) {
 						window.location = "#2";
 					});
-					$mainContainer.on("click", "#rightSideLobby", function(event) {
+					$mainContainer.on("click", "#rightSideLobby", function (event) {
 						window.location = "#1";
 					});
-					$mainContainer.on("click", ".lobby-navigation-arrows-right", function(event) {
+					$mainContainer.on("click", ".lobby-navigation-arrows-right", function (event) {
 						window.location = "#1";
 					});
-					$mainContainer.on("click", "#leftSideDetails", function(event) {
+					$mainContainer.on("click", "#leftSideDetails", function (event) {
 						window.location = "#1";
 					});
-					$mainContainer.on("click", ".details-navigation-arrows-left", function(event) {
+					$mainContainer.on("click", ".details-navigation-arrows-left", function (event) {
 						window.location = "#1";
 					});
 
-					$mainContainer.on("click", ".addNewEvent-cellIcon", function(event) {
+					$(".addNewEvent-cellIcon").click(function (event) {
+						$(this).hide();
+
+						var $overlay = $("#calendar").siblings(".dotted-page-overlay");
+						$overlay.css("opacity", 1);
+						$overlay.show();
+
 						var txtDay = $(this).parent().find(".day").text();
 						$("#hiddenDay").attr("name", txtDay);
 						$("#add-new-event-container").show();
+
 						event.stopPropagation();
 					});
 
-					var $addNewEventContainer = $("#add-new-event-container");
-
-					$("#closeBtn-add-event-container").click(function() {
-						$addNewEventContainer.fadeOut();
+					$("#btnClose-AddEventContainer").click(function () {
+						var $overlay = $("#calendar").siblings(".dotted-page-overlay");
+						$overlay.fadeOut();
+						$("#add-new-event-container").hide();
 					});
-					$(".border-close-text").click(function() {
-						$addNewEventContainer.fadeOut();
-					});
-					$(".close-text").click(function() {
-						$addNewEventContainer.fadeOut();
-					});
-
-
 				}();
 			}
 		};
