--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿<div class="navigation-arrows">
-</div>
+﻿<div class="navigation-arrows"></div>
 
 <div id="slides">
 	<ul class="slides-container">
@@ -171,31 +170,6 @@
 							$(this).css("background", "rgb(215,215,215)");
 						}
 					}, '.dark-icon');
-
-					var $menuItemContainer = $(".menu-item-container");
-
-					//$menuItemContainer.hover(function() {
-					//	var $dropDown = $(this).find(".menu-item-dropdown-container");
-					//	$dropDown.toggleClass("menu-dropdown-visible");
-
-					//	if ($dropDown.hasClass("menu-dropdown-visible")) {
-					//		$dropDown.slideDown();
-					//	} else {
-					//		$dropDown.slideUp();
-					//	}
-
-					//}, function() {
-					//	var $dropDown = $(this).find(".menu-item-dropdown-container");
-					//	$dropDown.toggleClass("menu-dropdown-visible");
-
-					//	if ($dropDown.hasClass("menu-dropdown-visible")) {
-					//		$dropDown.slideDown();
-					//	} else {
-					//		$dropDown.slideUp();
-					//	}
-
-
-					//});
 
 					$mainContainer.on({
 						mouseenter: function () {
