--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -102,52 +102,33 @@
 	<div style="margin-top:150px;width:30%;display:inline-block;margin-left:8%">
 		<div class="menu-item-container">
 			<div class="border-item inne-border-tab"></div>
-			<div class="menu-item" name="inne" data-bind="click: function () { $root.slideDownMenuOptionsOnClick($element) }"><span>Inne</span></div>
-			<div class="menu-item-dropdown-container">
-				<div class="menu-item-dropdown">pokaż</div>
-				<div class="menu-item-dropdown" data-bind="click: function () { $root.showAddEventPopupOnClick($element) }">dodaj</div>
-			</div>
+			<div class="menu-item" name="inne"><span>Inne</span></div>
+			
 		</div>
 		<div class="menu-item-container">
 			<div class="border-item spotkania-border-tab"></div>
-			<div class="menu-item" name="spotkania" data-bind="click: function () { $root.slideDownMenuOptionsOnClick($element) }"><span>Spotkania</span></div>
-			<div class="menu-item-dropdown-container">
-				<div class="menu-item-dropdown">pokaż</div>
-				<div class="menu-item-dropdown" data-bind="click: function () { $root.showAddeEventPopupOnClick($element) }">dodaj</div>
-			</div>
+			<div class="menu-item" name="spotkania"><span>Spotkania</span></div>
+			
 		</div>
 		<div class="menu-item-container">
 			<div class="border-item kursy-border-tab"></div>
-			<div class="menu-item" name="kursy" data-bind="click: function () { $root.slideDownMenuOptionsOnClick($element) }"><span>Kursy</span></div>
-			<div class="menu-item-dropdown-container">
-				<div class="menu-item-dropdown">pokaż</div>
-				<div class="menu-item-dropdown" data-bind="click: function () { $root.showAddeEventPopupOnClick($element) }">dodaj</div>
-			</div>
+			<div class="menu-item" name="kursy"><span>Kursy</span></div>
+			
 		</div>
 		<div class="menu-item-container">
 			<div class="border-item szkolenia-border-tab"></div>
-			<div class="menu-item" name="szkolenia" data-bind="click: function () { $root.slideDownMenuOptionsOnClick($element) }"><span>Szkolenia</span></div>
-			<div class="menu-item-dropdown-container">
-				<div class="menu-item-dropdown">pokaż</div>
-				<div class="menu-item-dropdown" data-bind="click: function () { $root.showAddeEventPopupOnClick($element) }">dodaj</div>
-			</div>
+			<div class="menu-item" name="szkolenia"><span>Szkolenia</span></div>
 
 		</div>
 		<div class="menu-item-container">
 			<div class="border-item zajecia-border-tab"></div>
-			<div class="menu-item" name="zajęcia" data-bind="click: function () { $root.slideDownMenuOptionsOnClick($element) }"><span>Zajęcia</span></div>
-			<div class="menu-item-dropdown-container">
-				<div class="menu-item-dropdown">pokaż</div>
-				<div class="menu-item-dropdown" data-bind="click: function () { $root.showAddeEventPopupOnClick($element) }">dodaj</div>
-			</div>
+			<div class="menu-item" name="zajęcia"><span>Zajęcia</span></div>
+			
 		</div>
 		<div class="menu-item-container">
 			<div class="border-item wydarzenia-border-tab"></div>
-			<div class="menu-item" name="wydarzenia" data-bind="click: function () { $root.slideDownMenuOptionsOnClick($element) }"><span>Wydarzenia</span></div>
-			<div class="menu-item-dropdown-container">
-				<div class="menu-item-dropdown">pokaż</div>
-				<div class="menu-item-dropdown" data-bind="click: function () { $root.showAddeEventPopupOnClick($element) }">dodaj</div>
-			</div>
+			<div class="menu-item" name="wydarzenia"><span>Wydarzenia</span></div>
+			
 		</div>
 		</div>
 		@if (Request.IsAuthenticated)
