--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/CalendarPage/_HoverEvent.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/CalendarPage/_HoverEvent.cshtml
@@ -1,14 +1,17 @@
 ﻿<div class="event-hover-container">
-	<div>
-		<span>co: </span><span class="event-hover-name"></span>
+	<div style="height:100%;background:rgba(0, 0, 0,.5);padding:20px;">
+		<div>
+			<span>co: </span><span class="event-hover-name"></span>
+		</div>
+		<div>
+			<span>gdzie: </span><span class="event-hover-adress"></span>
+		</div>
+		<div>
+			<span>start: </span><span class="event-hover-startHour"></span>
+		</div>
+		<div>
+			<span>koniec: </span><span class="event-hover-endHour"></span>
+		</div>
 	</div>
-	<div>
-		<span>gdzie: </span><span class="event-hover-adress"></span>
-	</div>
-	<div>
-		<span>start: </span><span class="event-hover-startHour"></span>
-	</div>
-	<div>
-		<span>koniec: </span><span class="event-hover-endHour"></span>
-	</div>
+
 </div>
